--- a/include/parcluster/api/parallel/BUILD.bazel
+++ b/include/parcluster/api/parallel/BUILD.bazel
@@ -7,7 +7,7 @@ cc_library(
     name = "parallel-utils",
     hdrs = ["parallel-utils.h"],
     deps = [
-        "@gbbs//pbbslib:utilities",
+        "@gbbs//gbbs:bridge",
     ],
 )
 
@@ -22,10 +22,6 @@ cc_library(
         "@gbbs//gbbs",
         "@gbbs//gbbs:graph_io",
         "@gbbs//gbbs:macros",
-        "@gbbs//pbbslib:get_time",
-        "@gbbs//pbbslib:seq",
-        "@gbbs//pbbslib:sequence_ops",
-        "@gbbs//pbbslib:utilities",
     ],
 )
 
@@ -37,13 +33,5 @@ cc_library(
         "@com_google_absl//absl/types:span",
         "@gbbs//gbbs:bridge",
         "@gbbs//gbbs:macros",
-        "@gbbs//pbbslib:counting_sort",
-        "@gbbs//pbbslib:integer_sort",
-        "@gbbs//pbbslib:monoid",
-        "@gbbs//pbbslib:quicksort",
-        "@gbbs//pbbslib:sample_sort",
-        "@gbbs//pbbslib:seq",
-        "@gbbs//pbbslib:sequence_ops",
-        "@gbbs//pbbslib:utilities",
     ],
 )
